Wed Dec  3 22:40:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (simple_default_value): returns simplest assignment only.
	  [ruby-core:20237]

Wed Dec  3 21:30:06 2008  Tanaka Akira  <akr@fsij.org>

	* process.c (check_exec_redirect): accept :in, :out, :err as redirect
	  target.

Wed Dec  3 21:18:27 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/ruby/test_rational.rb: revert.

Wed Dec  3 14:48:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (ip_ruby_cmd, ip_invoke_with_position): must
	  not access internal union directly.  [ruby-list:45670]

Wed Dec  3 12:24:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_getc, rb_io_readchar): documentation correction from
	  Emiel van de Laar.  [ruby-core:20212]

	* ext/stringio/stringio.c (strio_readchar): ditto.

Wed Dec  3 09:26:29 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/rexml/xpath.rb (REXML::XPath.first): apply documentation
	  patch from Ken Bloom in [ruby-core:20213].

	* lib/rexml/xpath.rb (REXML::XPath.each): ditto.

Wed Dec  3 02:56:34 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_rational.rb: add a test.

Wed Dec  3 02:53:24 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_range.rb: add a test.

Wed Dec  3 02:26:07 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_string.rb: add some tests.

Wed Dec  3 02:04:21 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/pty/pty.c (Init_pty): fix typo.

Tue Dec  2 19:22:13 2008  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb (Open3.popen3): merge hash options if given. 

Tue Dec  2 15:31:42 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/net/protocol.rb (Net::BufferedIO#rbuf_fill): use
	  read_nonblock instead of sysread wrapped by timeout to boost
	  performance.  a patch from Aaron Patterson in [ruby-core:20191].
	  fix #806

Mon Dec  1 23:23:52 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* set 1.9.1-p5000 into version number. [ruby-dev:36998]
