@@ -1,3 +1,8 @@
+Wed Dec  3 22:54:39 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (expr): keyword_not can continue across newline.
+	  [ruby-core:20252]
+
 Wed Dec  3 22:40:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* iseq.c (simple_default_value): returns simplest assignment only.
